improvements
- logging
- use ProcessBuilder instead of Runtime